RESOLVED FIXED214572
REGRESSION (r264242): [ macOS ] imported/w3c/web-platform-tests/wasm/jsapi/constructor/instantiate.any.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=214572
Summary REGRESSION (r264242): [ macOS ] imported/w3c/web-platform-tests/wasm/jsapi/co...
Karl Rackler
Reported 2020-07-20 13:54:45 PDT
Description: imported/w3c/web-platform-tests/wasm/jsapi/constructor/instantiate.any.html This has been a flaky crash. This has appeared on Catalina WK2 debug once on 07/19/20. Then appears on Catalina rWK1 release starting 07/14/20 crashing two days consecutively. Another instance appears as a flaky crash on Mojave WK1 debug and release for 3 days in a row starting 07/15/20. I can reproduce this for r264242, but not for r264241. REPRODUCTION STEPS run-webkit-tests --iterations 500 --exit-after-n-failures 3 --exit-after-n-crashes-or-timeouts 1 --debug-rwt-logging --no-retry --force --no-build -f --root imported/w3c/web-platform-tests/wasm/jsapi/constructor/instantiate.any.html History: https://results.webkit.org/?limit=50000&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fwasm%2Fjsapi%2Fconstructor%2Finstantiate.any.html&platform=mac Crash Log: Thread 31 Crashed:: Wasm Worklist Helper Thread 0 libobjc.A.dylib 0x00007fff5cdc039d objc_msgSend + 29 1 com.apple.CoreFoundation 0x00007fff325744a9 CFEqual + 621 2 com.apple.CoreFoundation 0x00007fff32570215 CFBasicHashAddValue + 1205 3 com.apple.CoreFoundation 0x00007fff325a2f6d CFRunLoopAddTimer + 477 4 com.apple.JavaScriptCore 0x000000010bee42d8 WTF::RunLoop::TimerBase::start(WTF::Seconds, bool) + 200 5 com.apple.JavaScriptCore 0x000000010cc50c67 JSC::JSRunLoopTimer::Manager::scheduleTimer(JSC::JSRunLoopTimer&, WTF::Seconds) + 695
Attachments
Patch (15.24 KB, patch)
2020-07-20 14:57 PDT, Geoffrey Garen
no flags
Patch (15.17 KB, patch)
2020-07-20 15:05 PDT, Geoffrey Garen
no flags
Patch (15.21 KB, patch)
2020-07-20 15:16 PDT, Geoffrey Garen
no flags
Radar WebKit Bug Importer
Comment 1 2020-07-20 13:56:11 PDT
Geoffrey Garen
Comment 2 2020-07-20 14:57:03 PDT
Geoffrey Garen
Comment 3 2020-07-20 15:05:25 PDT
Geoffrey Garen
Comment 4 2020-07-20 15:16:08 PDT
EWS
Comment 5 2020-07-20 16:36:06 PDT
Committed r264635: <https://trac.webkit.org/changeset/264635> All reviewed patches have been landed. Closing bug and clearing flags on attachment 404766 [details].
Note You need to log in before you can comment on or make changes to this bug.