Source/WebCore/bindings/js/CommonVM.cpp
@@ -56,13 +56,7 @@ JSC::VM& commonVMSlow()
     // Also, initializeMainThread() does nothing on iOS.
     ScriptController::initializeMainThread();
 
-    RunLoop* runLoop = nullptr;
-#if PLATFORM(IOS_FAMILY)
-    if (RunLoop* web = RunLoop::webIfExists())
-        runLoop = web;
-#endif
-
-    auto& vm = JSC::VM::create(JSC::LargeHeap, runLoop).leakRef();
+    auto& vm = JSC::VM::create(JSC::LargeHeap).leakRef();
 
     g_commonVMOrNull = &vm;
 
@@ -71,6 +65,7 @@ JSC::VM& commonVMSlow()
 #if PLATFORM(IOS_FAMILY)
     if (WebThreadIsEnabled())
         vm.apiLock().makeWebThreadAware();
+    vm.setRunLoop(WebThreadRunLoop());
     vm.heap.machineThreads().addCurrentThread();
 #endif
 
